--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <h1>Siddamshetty Saketh</h1>
     <hr>
     <h3>I am Saketh Frontend Developerr</h3>
-    <img src="https://picsum.photos/536/354">
+    <img src="https://picsum.photos/id/237/200/300">
 </body>
 </html>
